# bombTheCardGame

./: .gitignore  Makefile  README  README.md  SettingUpAServerOnLAN  build.zig  build.zig.zon  card_sample.json  gleam.toml  main.py  package-lock.json  package.json  requirements.txt  settings.json  tests.py
.zig-cache/o/17ec3bd8148b89db6ec06f9c021e1d55/: bombTheCardGame
.zig-cache/o/265585df8e0efff476732dacbe1a9269/: bombTheCardGame
.zig-cache/o/2676a5440fdf6015c06395a1457a8441/: bombTheCardGame
.zig-cache/o/2d7b5b4fdd8c08499ab9d8d82fe429d6/: bombTheCardGame
.zig-cache/o/2ee0b5a3c68d2eed6c1366339c322b1b/: bombTheCardGame
.zig-cache/o/4558078caa2eb6ae3fd57e8fa56ebff9/: bombTheCardGame
.zig-cache/o/45b53084e8dcc953d0f5f03c2eb3bfe6/: bombTheCardGame
assets/: card_sample.json
backend/: backend.cabal
backend/.stack-work/: stack.sqlite3
backend/.stack-work/ghci/6f408b80/: cabal_macros.h
backend/.stack-work/ghci/f460d1b3/: cabal_macros.h
backend/pages/: index.html  render.html
backend/src/: Cards.hs  Main.hs  Session.hs  main.rs
client/: gleam.toml  index.html  manifest.toml
client/priv/static/: client.mjs
client/src/: client.gleam
frontend/: Cargo.toml  index.html  links  package-lock.json  package.json  style.css  todo
frontend/src/: main.rs
server/: gleam.toml  manifest.toml
server/src/: server.gleam
src/: bombthecardgame.gleam  cards.zig  main.zig  router.zig
views/: boilerplate.html  create.html  home.html  index.html  join.html  play.html
vue_website/: package-lock.json  package.json
website/: __init__.py
(+9 files in other folders)
