cabal-version:       2.2

name:                backend
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/backend#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable backend
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Cards
                        , Session
  default-language:    Haskell2010
  build-depends:       random ^>=1.2.1.3
                        , base >= 4.7 && < 5
                        , scotty
                        , aeson
                        , text
                        , bytestring
                        , random
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
